prevent the popup from completely covering the map

--- a/editor/extend-maps/maps.css
+++ b/editor/extend-maps/maps.css
@@ -35,7 +35,7 @@ html {
 
 .mapillary-popup > .leaflet-popup-content-wrapper > .leaflet-popup-content img:nth-child(1) {
 	max-width: 100vw !important;
-	max-height: 85vh;
+	max-height: 70vh;
 }
 
 .popup-infotext {
